--- a/main.html
+++ b/main.html
@@ -70,6 +70,9 @@
                             <div>
                                 <div id="division">
                                 </div>
+                                <div id="today_line">
+                                    <div></div>
+                                </div>
                             </div>
                             
                             <div id="date_row">
